MDEV-13897 SELECT @a := MAX(col) FROM t requires full index scan

fix some old bad merge